2010-06-15  Mike Frysinger  <vapier@gentoo.org>

  * src/bus/s3c4510x.c: Punt dead/useless cvs log info.

2010-06-14  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac: Drop stropts.h check since parport code no longer uses it.

  * configure.ac: Check for sys/wait.h usability.
  * src/cmd/cmd_bfin.c: Include sys/wait.h when available since we use macros
    from it, and change the mingw check to key off this header instead to make
    things a bit more portable.

  * src/tap/parport/ppi.c (ppi_connect): Fix return type to match expected,
    and tweak style to match ppdev.c better.

  * src/tap/idcode.c (urj_tap_idcode): Fix typo in comment (bits, not bytes),
    fix local types so we don't mismatch signs, and avoid leaking register
    allocations with the error handling.

  * include/urjtag/bfin.h (scans), include/urjtag/bus.h (urj_bus_drivers),
    include/urjtag/cable.h (urj_tap_cable_drivers), include/urjtag/flash.h
    (urj_flash_flash_drivers), include/urjtag/params.h (urj_param_list_t.list),
    include/urjtag/parport.h (urj_tap_parport_drivers),
    include/urjtag/usbconn.h (urj_tap_usbconn_drivers), src/bfin/bfin.c
    (scans), src/bus/buses.c (urj_bus_drivers, bus_param), src/flash/flash.c
    (urj_flash_flash_drivers), src/tap/cable.c (urj_tap_cable_drivers),
    src/tap/cable/generic_usbconn.c (urj_tap_cable_usbconn_cables),
    src/tap/parport.c (urj_tap_parport_drivers), src/tap/usbconn.c
    (urj_tap_usbconn_drivers): Constify drivers lists and a few related
    structures to share more unmutable data in .rodata.

2010-05-19  Arnim Laeuger  <arniml>

  * src/flash/amd.c, doc/UrJTAG.txt: [ 2996919 ] Support for MX29LV320C

2010-05-05  Mike Frysinger  <vapier@gentoo.org>

  * src/cmd/cmd_debug.c (string_to_log_level): Tweak the -1 sanity check to
    avoid warnings from gcc about -1 not being an enum value.

2010-02-16  Mike Frysinger  <vapier@gentoo.org>

  * data/MANUFACTURERS: Use the official ADI name.
